lldpd (0.9.4)
  * Change:
    + Make lldpd accepts a `-p` option to specify the PID file.
    + lldpcli will now display chassis TTL when detailed view is enabled.

lldpd (0.9.3)
  * Change:
    + Do not rely on support of constructors for liblldpctl.
    + Always log to stderr (even in addition to syslog).
    + `lldpcli watch` accepts a limit on the number of received events.
  * Fix:
    + `lldpcli -f {xml,json} watch` should work now.
    + Consider `veth` interfaces as physical interfaces.

lldpd (0.9.2)
  * Change:
    + Ability to add/remove/replace custom TLV from lldpcli.
    + LLDP-MED capabilities are displayed differently in lldpcli.
    + Limit the maximum depth (5) when trying to apply a VLAN.
    + Change JSON output format when using json-c to match Jansson
      output.
    + Integration tests for the major parts of lldpd, including use of
      address and leak sanitizer.
  * Fix:
    + LLDP-MED POE TLV are now displayed in lldpcli.
    + Ignore lower link when it is in another namespace.
    + Fix various problems with interfaces being enslaved.
    + Fix a memory leak when modifying port-related settings.

lldpd (0.9.1)
  * Change:
    + Rework packaging for OS X to make it work with El Capitan. To
      simplify a bit, it is not possible anymore to build fat
      binaries. Latest version of OS X supporting 32bit was 10.6.
  * Fix:
    + By default, when using port alias as description, use port name
      as port ID.
    + Miscellaneous fixes with netlink cache.
    + Ensure large netlink messages can be received.

lldpd (0.9.0)
  * Change:
    + Don't rely on libnl3 for netlink. Reuse the previous code and
      implement a lighweight cache.

lldpd (0.8.0, never released)
  * Fix:
    + Fix a buffer overflow when receiving a too large management
      address TLV. Unless hardening has been disabled, this overflow
      cannot be used for arbitrary code execution.
    + Update LLDP-MED policy L2 priority values to match