@@ -517,8 +517,8 @@ interfaces_helper_port_name_desc(struct lldpd *cfg,
 	int portid_type = cfg->g_config.c_lldp_portid_type;
 	if (portid_type == LLDP_PORTID_SUBTYPE_IFNAME ||
 	    (portid_type == LLDP_PORTID_SUBTYPE_UNKNOWN && has_alias) ||
-	    (portid_type == LLDP_PORTID_SUBTYPE_LOCAL && has_alias)) {
-		if (portid_type != LLDP_PORTID_SUBTYPE_LOCAL) {
+	    (port->p_id_subtype == LLDP_PORTID_SUBTYPE_LOCAL && has_alias)) {
+		if (port->p_id_subtype != LLDP_PORTID_SUBTYPE_LOCAL) {
 			log_debug("interfaces", "use ifname for %s",
 			    hardware->h_ifname);
 			port->p_id_subtype = LLDP_PORTID_SUBTYPE_IFNAME;
@@ -529,19 +529,21 @@ interfaces_helper_port_name_desc(struct lldpd *cfg,
 			memcpy(port->p_id, hardware->h_ifname, port->p_id_len);
 		}
 
-		/* use the actual alias in the port description */
-		log_debug("interfaces", "using alias in description for %s",
-			  hardware->h_ifname);
-		free(port->p_descr);
-		if (has_alias) {
-			port->p_descr = strdup(iface->alias);
-		} else {
-			/* We don't have anything else to put here and for CDP
-			 * with need something non-NULL */
-			port->p_descr = strdup(hardware->h_ifname);
+		if (port->p_descr_force == 0) {
+			/* use the actual alias in the port description */
+			log_debug("interfaces", "using alias in description for %s",
+			    hardware->h_ifname);
+			free(port->p_descr);
+			if (has_alias) {
+				port->p_descr = strdup(iface->alias);
+			} else {
+				/* We don't have anything else to put here and for CDP
+				 * with need something non-NULL */
+				port->p_descr = strdup(hardware->h_ifname);
+			}
 		}
 	} else {
-		if (portid_type != LLDP_PORTID_SUBTYPE_LOCAL) {
+		if (port->p_id_subtype != LLDP_PORTID_SUBTYPE_LOCAL) {
 			log_debug("interfaces", "use MAC address for %s",
 			    hardware->h_ifname);
 			port->p_id_subtype = LLDP_PORTID_SUBTYPE_LLADDR;
@@ -552,11 +554,13 @@ interfaces_helper_port_name_desc(struct lldpd *cfg,
 			port->p_id_len = ETHER_ADDR_LEN;
 		}
 
-		/* use the ifname in the port description until alias is set */
-		log_debug("interfaces", "using ifname in description for %s",
-			  hardware->h_ifname);
-		free(port->p_descr);
-		port->p_descr = strdup(hardware->h_ifname);
+		if (port->p_descr_force == 0) {
+			/* use the ifname in the port description until alias is set */
+			log_debug("interfaces", "using ifname in description for %s",
+			    hardware->h_ifname);
+			free(port->p_descr);
+			port->p_descr = strdup(hardware->h_ifname);
+		}
 	}
 }
 
