@@ -88,3 +88,77 @@ def test_management_address(lldpd1, lldpd, lldpcli, links, namespaces):
     with namespaces(1):
         out = lldpcli("-f", "keyvalue", "show", "neighbors")
         assert out["lldp.eth0.chassis.mgmt-ip"] == "172.25.21.47"
+
+
+def test_portid_subtype_ifname(lldpd1, lldpd, lldpcli, namespaces):
+    with namespaces(2):
+        lldpd()
+        result = lldpcli("configure", "lldp", "portidsubtype", "ifname")
+        time.sleep(3)
+    with namespaces(1):
+        out = lldpcli("-f", "keyvalue", "show", "neighbors")
+        assert out["lldp.eth0.port.ifname"] == "eth1"
+        assert out["lldp.eth0.port.descr"] == "eth1"
+
+
+def test_portid_subtype_with_alias(lldpd1, lldpd, lldpcli, links, namespaces):
+    with namespaces(2):
+        ipr = pyroute2.IPRoute()
+        idx = ipr.link_lookup(ifname="eth1")[0]
+        ipr.link('set', index=idx, ifalias="alias of eth1")
+        lldpd()
+    with namespaces(1):
+        out = lldpcli("-f", "keyvalue", "show", "neighbors")
+        assert out["lldp.eth0.port.ifname"] == "eth1"
+        assert out["lldp.eth0.port.descr"] == "alias of eth1"
+
+
+def test_portid_subtype_macaddress(lldpd1, lldpd, lldpcli, links, namespaces):
+    with namespaces(2):
+        ipr = pyroute2.IPRoute()
+        idx = ipr.link_lookup(ifname="eth1")[0]
+        ipr.link('set', index=idx, ifalias="alias of eth1")
+        lldpd()
+        result = lldpcli("configure", "lldp", "portidsubtype", "macaddress")
+        time.sleep(3)
+    with namespaces(1):
+        out = lldpcli("-f", "keyvalue", "show", "neighbors")
+        assert out["lldp.eth0.port.mac"] == "00:00:00:00:00:02"
+        assert out["lldp.eth0.port.descr"] == "eth1"
+
+
+def test_portid_subtype_local(lldpd1, lldpd, lldpcli, namespaces):
+    with namespaces(2):
+        lldpd()
+        result = lldpcli("configure", "lldp", "portidsubtype", "local", "localname")
+        time.sleep(3)
+    with namespaces(1):
+        out = lldpcli("-f", "keyvalue", "show", "neighbors")
+        assert out["lldp.eth0.port.local"] == "localname"
+        assert out["lldp.eth0.port.descr"] == "eth1"
+
+
+def test_portid_subtype_local_with_description(lldpd1, lldpd, lldpcli, namespaces):
+    with namespaces(2):
+        lldpd()
+        result = lldpcli("configure", "lldp", "portidsubtype", "local", "localname", "description", "localdescription")
+        time.sleep(3)
+    with namespaces(1):
+        out = lldpcli("-f", "keyvalue", "show", "neighbors")
+        assert out["lldp.eth0.port.local"] == "localname"
+        assert out["lldp.eth0.port.descr"] == "localdescription"
+
+
+def test_portid_subtype_local_with_alias(lldpd1, lldpd, lldpcli, namespaces):
+    with namespaces(2):
+        ipr = pyroute2.IPRoute()
+        idx = ipr.link_lookup(ifname="eth1")[0]
+        ipr.link('set', index=idx, ifalias="alias of eth1")
+        lldpd()
+        lldpd()
+        result = lldpcli("configure", "lldp", "portidsubtype", "local", "localname")
+        time.sleep(3)
+    with namespaces(1):
+        out = lldpcli("-f", "keyvalue", "show", "neighbors")
+        assert out["lldp.eth0.port.local"] == "localname"
+        assert out["lldp.eth0.port.descr"] == "alias of eth1"
